# src/app/backend/docs/swagger.json
@@ -23,7 +23,7 @@
                 "summary": "Get JWEToken",
                 "parameters": [
                     {
-                        "description": "It contains all the information required to authenticate user.",
+                        "description": "Information required to authenticate user",
                         "name": "LoginSpec",
                         "in": "body",
                         "required": true,
@@ -37,6 +37,28 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/api.AuthResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/login/skippable": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "AuthenticationSkippable tells if the Skip button should be enabled or not",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.LoginSkippableResponse"
                         }
                     }
                 }
@@ -55,6 +77,14 @@
                 },
                 "jweToken": {
                     "type": "string"
+                }
+            }
+        },
+        "api.LoginSkippableResponse": {
+            "type": "object",
+            "properties": {
+                "skippable": {
+                    "type": "boolean"
                 }
             }
         },
